fix collapse bar height and tracking field column

--- a/app/assets/stylesheets/program_streams/show.scss
+++ b/app/assets/stylesheets/program_streams/show.scss
@@ -17,6 +17,23 @@ body[id='program_streams-show'], body[id='program_streams-preview'] {
 
   .panel-heading {
     cursor: pointer;
+    padding: 0;
   }
 
+  .full-height {
+    height: 50px;
+    line-height: 50px;
+    vertical-align: middle;
+    padding-left: 16px;
+    margin-top: 0 !important;
+  }
+
+  .height-row {
+    height: 50px;
+  }
+
+  .btn-edit-margin {
+    margin-right: 10px;
+    margin-top: 10px;
+  }
 }
